# freqtrade-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  Tiltfile  repomix.config.json  repomix.instruction.md  rust-toolchain.toml
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: dev.yml  devtools.yml  docker.yml  helm.yml  rust.yml  utils.yml  version.yml
deploy/helm/freqtrade-operator/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
deploy/helm/freqtrade-operator-crds/: Chart.yaml  README.md  README.md.gotmpl
deploy/helm/freqtrade-operator-crds/templates/: freqtrade.io.yaml
deploy/helm/freqtrade-operator/templates/: _helpers.tpl  controller-deployment.yaml  rbac.yaml  webhook-admission-webhook.yaml  webhook-deployment.yaml  webhook-service.yaml
docs/: getting_started.md  reference.md
examples/: basic.bot.yaml  freqai.bot.yaml
ft-operator/: Cargo.toml
ft-operator-common/: Cargo.toml
ft-operator-common/src/: config.rs  constant.rs  lib.rs  state.rs  telemetry.rs  utils.rs
ft-operator-controller/: Cargo.toml
ft-operator-controller/src/: error.rs  lib.rs
ft-operator-controller/src/controller/: bot.rs  context.rs  mod.rs  traits.rs  utils.rs
ft-operator-controller/src/crd/: mod.rs  utils.rs
ft-operator-controller/src/crd/hub/: bot.rs  common.rs  mod.rs  traits.rs
ft-operator-controller/src/crd/v1alpha1/: bot.rs  common.rs  mod.rs
ft-operator-webhook/: Cargo.toml
ft-operator-webhook/src/: error.rs  lib.rs  server.rs
ft-operator-webhook/src/admission/: bot.rs  error.rs  mod.rs  utils.rs
ft-operator-webhook/src/router/v1/: admission.rs
ft-operator/src/: cli.rs  main.rs
