[package]
name = "ft-operator-controller"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
ft-operator-common = { path = "../ft-operator-common" }

anyhow = { version = "1.0.75" }
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7.10"
async-trait = "0.1.81"
futures = "0.3.30"
kube = { version = "2.0.1", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.26.0", default-features = false, features = ["v1_30", "schemars"] }
serde = "1"
serde_json = "1.0"
schemars = { version = "1.0", features = ["chrono04", "raw_value"] }
thiserror = "2.0.12"
serde_norway = "0.9"
chrono = "0.4.38"
either = "1.13.0"
