[package]
name = "freqtrade-operator"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "freqtrade-operator"
path = "src/main.rs"

[dependencies]
ft-operator-common = { path = "../ft-operator-common" }
ft-operator-controller = { path = "../ft-operator-controller" }
ft-operator-webhook = { path = "../ft-operator-webhook" }

tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.10"
rustls = { version = "0.23.12", features = ["aws_lc_rs"] }
async-trait = "0.1.81"
futures = "0.3.30"
serde = "1"
serde_json = "1.0"
thiserror = "1"
serde_yaml = "0.9.34"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["env", "derive"] }
